Protected vinyl routes with login & caught userId inserted in Sql queries via jwt decoding
