# middleware/users.js
@@ -1,19 +1,19 @@
 const jwt = require("jsonwebtoken");
 module.exports = {
-  validateRegister: (req, res, next) => {
-    let username = req.body.username;
-    let password = req.body.password;
-    let repeatPassword = req.body.repeat_password;
+  validateRegister: (request, response, next) => {
+    let username = request.body.username;
+    let password = request.body.password;
+    let repeatPassword = request.body.repeat_password;
 
     // username min length 3
     if (!username || username.length < 3) {
-      return res.status(400).send({
+      return response.status(400).send({
         msg: 'Please enter a username with min. 3 chars'
       });
     }
     // password min 10 chars
     if (!password || password.length < 10) {
-      return res.status(400).send({
+      return response.status(400).send({
         msg: 'Please enter a password with min. 10 chars'
       });
     }
@@ -22,10 +22,26 @@ module.exports = {
       !repeatPassword ||
       password != repeatPassword
     ) {
-      return res.status(400).send({
+      return response.status(400).send({
         msg: 'Both passwords must match'
       });
     }
     next();
+  },
+
+  isLoggedIn: (request, response, next) => {
+    try {
+      const token = request.header('Authorization').replace('Bearer ', '');
+      const decoded = jwt.verify(
+        token,
+        process.env.SECRET_JWT
+      );
+      request.userData = decoded;
+      next();
+    } catch (err) {
+      return response.status(401).send({
+        msg: "Your session is not valid !",
+      });
+    }
   }
 };
